[tool.poetry]
name = "streamlit-ai-workflow"
version = "0.1.0"
description = ""
authors = ["briant-spindance <brian.tol@spindance.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.2.1"
streamlit = "^1.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
